--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -338,20 +338,26 @@
           authUser();
           updateAuthElements();
 */
-          console.log('opening iab');
-          GOOG.iabOpen('YOYO', function(err){
-              if (err) return console.error(err);
-              console.log('iab opened, get inventory');
-              GOOG.iabInventory(['dungeon_chronicles.golds.10', 'dungeon_chronicles.golds.50'], function(err, inventory){
-                  if (err) console.error(err);
-                  console.log('inventory obtained: ');
-                  console.log(JSON.stringify(inventory));
-                  GOOG.iabClose(function(err){
-                      if (err) console.error(err);
-                      console.log('iab closed');
-                  });
-              });
-          });
+        console.log('opening iab');
+        GOOG.iabOpen('YOYO', function(err){
+            if (err) return console.error(err);
+            console.log('iab opened, get inventory');
+            GOOG.iabInventory(['dungeon_chronicles.golds.10', 'dungeon_chronicles.golds.50'], function(err, inventory){
+                if (err) return console.error(err);
+                console.log('inventory obtained: ');
+                console.log(JSON.stringify(inventory));
+                console.log('buy 10 golds');
+                GOOG.iabBuy('dungeon_chronicles.golds.10', 'YOYO', function(err, purchase){
+                    if (err) return console.error(err);
+                    console.log('purchased 10 golds');
+                    console.log(JSON.stringify(purchase));
+                    GOOG.iabClose(function(err){
+                        if (err) return console.error(err);
+                        console.log('iab closed');
+                    });
+                });
+            });
+        });
       });
   </script>
   
