tested consume item

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -338,6 +338,15 @@
           authUser();
           updateAuthElements();
 */
+        var consumeItem = function(list, cb){
+            if (!list || !list.length) return cb();
+            console.log('consuming '+list[0]);
+            GOOG.iabConsume(list[0], function(err, purchase){
+                if (err) console.error(err);
+                if (purchase) console.log('consumed an item:'+JSON.stringify(purchase));
+                cb();
+            });
+        };
         console.log('opening iab');
         GOOG.iabOpen('YOYO', function(err){
             if (err) return console.error(err);
@@ -346,14 +355,16 @@
                 if (err) return console.error(err);
                 console.log('inventory obtained: ');
                 console.log(JSON.stringify(inventory));
-                console.log('buy 30 golds');
-                GOOG.iabBuy('dungeon_chronicles.golds.30', 'YOYO', function(err, purchase){
-                    if (err) return console.error(err);
-                    console.log('purchased 10 golds');
-                    console.log(JSON.stringify(purchase));
-                    GOOG.iabClose(function(err){
+                consumeItem(inventory.purchaseDataList, function(){
+                    console.log('buy 30 golds');
+                    GOOG.iabBuy('dungeon_chronicles.golds.30', 'YOYO', function(err, purchase){
                         if (err) return console.error(err);
-                        console.log('iab closed');
+                        console.log('purchased 30 golds');
+                        console.log(JSON.stringify(purchase));
+                        GOOG.iabClose(function(err){
+                            if (err) return console.error(err);
+                            console.log('iab closed');
+                        });
                     });
                 });
             });
