--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -304,8 +304,12 @@
       </p>
     </div>
   </div>
+
+    <button id=signin>Google+ signin</button>
+    <button id=signout>Google+ signout</button>
+    <p id=gmsStatus></p>
  
- <div id="deviceready"></div>
+ <!--<div id="deviceready"></div>-->
  
   <script type="text/javascript" src="cordova.js"></script>
   <!-- cordova facebook plugin -->
@@ -338,24 +342,25 @@
           authUser();
           updateAuthElements();
 */
+/*
         console.log('opening iab');
-        gapi.iab.open('YOYO', function(err){
+        GOOG.iab.open('YOYO', function(err){
             if (err) return console.error(err);
             console.log('iab opened, get inventory');
-            gapi.iab.inventory(['dungeon_chronicles.golds.10', 'dungeon_chronicles.golds.30'], function(err, inventory){
+            GOOG.iab.inventory(['dungeon_chronicles.golds.10', 'dungeon_chronicles.golds.30'], function(err, inventory){
                 if (err) return console.error(err);
                 console.log('inventory obtained: ');
                 console.log(JSON.stringify(inventory));
                 console.log('consuming items:'+JSON.stringify(inventory.purchaseDataList));
-                gapi.iab.consumes(inventory.purchaseDataList, function(err, consumeList){
+                GOOG.iab.consumes(inventory.purchaseDataList, function(err, consumeList){
                     if (err) console.error(err);
                     if (consumeList) console.log('consumed items:'+JSON.stringify(consumeList));
                     console.log('buy 30 golds');
-                    gapi.iab.buy('dungeon_chronicles.golds.30', 'YOYO', function(err, purchase){
+                    GOOG.iab.buy('dungeon_chronicles.golds.30', 'YOYO', function(err, purchase){
                         if (err) return console.error(err);
                         console.log('purchased 30 golds');
                         console.log(JSON.stringify(purchase));
-                        gapi.iab.close(function(err){
+                        GOOG.iab.close(function(err){
                             if (err) return console.error(err);
                             console.log('iab closed');
                         });
@@ -363,7 +368,31 @@
                 });
             });
         });
+*/
+
+        function onConnectionListener(err, result){
+            var gmsStatus = document.querySelector('p#gmsStatus');
+            gmsStatus.innerHTML = result.signin ? "Succeeded" : "failed: "+result.reason;
+        }
+
+        function onSiginClicked(e){
+            GOOG.gms.signin();
+        }
+
+        function onSignoutClicked(e){
+            GOOG.gms.signout();
+        }
+
+        GOOG.gms.setup(GOOG.gms.CLIENT_ALL, null, onConnection);
+
+        var
+        btnSignin = document.querySelector('button#siginin'),
+        btnSignout = document.querySelector('button#signout');
+
+        btnSignin.addEventListener('click', onSigninClicked, false);
+        btnSignout.addEventListener('click', onSignoutClicked, false);
       });
+
   </script>
   
 </body>
