--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -408,6 +408,18 @@ console.log('onConnectionListener: '+JSON.stringify(result));
                 case GOOG.gms.STATE_DELETED:
                     gmsStatus.innerHTML = 'STATE_DELETED: '+JSON.stringify(result);
                     break;
+                case GOOG.games.STATE_ACHIEVEMENT_LOADED:
+                    break;
+                case GOOG.games.STATE_ACHIEVEMENT_UPDATED:
+                    break;
+                case GOOG.games.STATE_GAMES_LAODED:
+                    break;
+                case GOOG.games.STATE_LEADERBOARD_SCORES_LOADED:
+                    break;
+                case GOOG.games.STATE_PLAYER_LOADED:
+                    break;
+                case GOOG.games.STATE_SCORES_SUBMITTED:
+                    break;
             }
         }
 
