--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -322,6 +322,8 @@
     <button id=gamesLoadAchievements>Games Load Achievements</button>
     <button id=gamesLoadGame>Games Load Game</button>
     <button id=gamesLoadPlayer>Games Load Player</button>
+    <button id=gamesloadLeaderboardMetadata>Games Leaderboard</button>
+    <button id=gamesloadLeaderboardMetadata1>Games Leaderboard 1</button>
     <button id=gamesLoadMoreScores>Games Load More Scores</button>
     <button id=gamesLoadPlayerCenteredScores>Games Load Player Centered Scores</button>
     <button id=gamesLoadTopScores>Games Load Player Top Scores</button>
@@ -496,11 +498,11 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         }
         function onIncreAchievement(e){
             console.log('onIncreAchievement');
-            GOOG.games.incrementAchievement('1', 1);
+            GOOG.games.incrementAchievement('110313750975838981251', 1);
         }
         function onIncreAchievementNow(e){
             console.log('onIncreAchievementNow');
-            GOOG.games.incrementAchievementImmediate('1', 1);
+            GOOG.games.incrementAchievementImmediate('110313750975838981251', 1);
         }
         function onLoadAchievements(e){
             console.log('onLoadAchievements');
@@ -513,6 +515,14 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         function onLoadPlayer(e){
             console.log('onLoadPlayer');
             GOOG.games.loadPlayer('123');
+        }
+        function onLoadLeaderboardMetadata(e){
+            console.log('onLoadLeaderboardMetadata');
+            GOOG.games.loadLeaderboardMetadata(true);
+        }
+        function onLoadLeaderboardMetadata1(e){
+            console.log('onLoadLeaderboardMetadata');
+            GOOG.games.loadLeaderboardMetadata('123', true);
         }
         function onbtnLoadMoreScores(e){
             console.log('onbtnLoadMoreScores');
@@ -528,11 +538,11 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         }
         function onRevealAchievement(e){
             console.log('onRevealAchievement');
-            GOOG.games.revealAchievement('123');
+            GOOG.games.revealAchievement('110313750975838981251');
         }
         function onRevealAchievementNow(e){
             console.log('onRevealAchievementNow');
-            GOOG.games.revealAchievementImmediate('123');
+            GOOG.games.revealAchievementImmediate('110313750975838981251');
         }
         function onSubmitScore(e){
             console.log('onSubmitScore');
@@ -544,11 +554,11 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         }
         function onUnlockAchievement(e){
             console.log('onUnlockAchievement');
-            GOOG.games.unlockAchievement('123');
+            GOOG.games.unlockAchievement('110313750975838981251');
         }
         function onUnlockAchievementNow(e){
             console.log('onUnlockAchievementNow');
-            GOOG.games.unlockAchievementImmediate('123');
+            GOOG.games.unlockAchievementImmediate('110313750975838981251');
         }
 
         GOOG.gms.setup(GOOG.gms.CLIENT_GAMES + GOOG.gms.CLIENT_APPSTATE, null, onConnectionListener);
@@ -570,6 +580,8 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         btnLoadAchievements = document.querySelector('button#gamesLoadAchievements');
         btnLoadGame = document.querySelector('button#gamesLoadGame');
         btnLoadPlayer = document.querySelector('button#gamesLoadPlayer');
+        btnLoadLeaderboardMetadata = document.querySelector('button#loadLeaderboardMetadata');
+        btnLoadLeaderboardMetadata1 = document.querySelector('button#loadLeaderboardMetadata1');
         btnLoadMoreScores = document.querySelector('button#gamesLoadMoreScores');
         btnLoadPlayerCenteredScores = document.querySelector('button#gamesLoadPlayerCenteredScores');
         btnLoadTopScores = document.querySelector('button#gamesLoadTopScores');
@@ -596,6 +608,8 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         btnLoadAchievements.addEventListener('click', onLoadAchievements, false);
         btnLoadGame.addEventListener('click', onLoadGame, false);
         btnLoadPlayer.addEventListener('click', onLoadPlayer, false);
+        btnLoadLeaderboardMetadata.addEventListener('click', onLoadLeaderboardMetadata, false);
+        btnLoadLeaderboardMetadata1.addEventListener('click', onLoadLeaderboardMetadata1, false);
         btnLoadMoreScores.addEventListener('click', onbtnLoadMoreScores, false);
         btnLoadPlayerCenteredScores.addEventListener('click', onLoadPlayerCenteredScores, false);
         btnLoadTopScores.addEventListener('click', onLoadTopScores, false);
