--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -498,11 +498,11 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         }
         function onIncreAchievement(e){
             console.log('onIncreAchievement');
-            GOOG.games.incrementAchievement('110313750975838981251', 1);
+            GOOG.games.incrementAchievement('CgkI3ob9060fEAIQBA', 1);
         }
         function onIncreAchievementNow(e){
             console.log('onIncreAchievementNow');
-            GOOG.games.incrementAchievementImmediate('110313750975838981251', 1);
+            GOOG.games.incrementAchievementImmediate('CgkI3ob9060fEAIQBA', 1);
         }
         function onLoadAchievements(e){
             console.log('onLoadAchievements');
@@ -514,7 +514,7 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         }
         function onLoadPlayer(e){
             console.log('onLoadPlayer');
-            GOOG.games.loadPlayer('110313750975838981251');
+            GOOG.games.loadPlayer('CgkI3ob9060fEAIQBA');
         }
         function onLoadLeaderboardMetadata(e){
             console.log('onLoadLeaderboardMetadata');
@@ -538,11 +538,11 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         }
         function onRevealAchievement(e){
             console.log('onRevealAchievement');
-            GOOG.games.revealAchievement('110313750975838981251');
+            GOOG.games.revealAchievement('CgkI3ob9060fEAIQAw');
         }
         function onRevealAchievementNow(e){
             console.log('onRevealAchievementNow');
-            GOOG.games.revealAchievementImmediate('110313750975838981251');
+            GOOG.games.revealAchievementImmediate('CgkI3ob9060fEAIQAw');
         }
         function onSubmitScore(e){
             console.log('onSubmitScore');
@@ -554,11 +554,11 @@ console.log('onConnectionListener: '+JSON.stringify(result));
         }
         function onUnlockAchievement(e){
             console.log('onUnlockAchievement');
-            GOOG.games.unlockAchievement('110313750975838981251');
+            GOOG.games.unlockAchievement('CgkI3ob9060fEAIQAw');
         }
         function onUnlockAchievementNow(e){
             console.log('onUnlockAchievementNow');
-            GOOG.games.unlockAchievementImmediate('110313750975838981251');
+            GOOG.games.unlockAchievementImmediate('CgkI3ob9060fEAIQAw');
         }
 
         GOOG.gms.setup(GOOG.gms.CLIENT_GAMES + GOOG.gms.CLIENT_APPSTATE, null, onConnectionListener);
